[STREAMPIPES-591] Prevent tests from failing with Java 17+